--- a/.htaccess
+++ b/.htaccess
@@ -4,5 +4,6 @@
 
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteCond %{REQUEST_FILENAME} !-f
+  #RewriteRule ^(.*)$ readme.html [QSA,PT,L]
   RewriteRule ^(.*)$ index.php/$1 [QSA,PT,L]
 </IfModule>
